--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.0",
+    "@mui/material": "^5.6.0",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.6.6",
     "axios": "^0.20.0",
+    "firebase": "^7.16.1",
+    "formik": "^2.2.9",
     "js-cookie": "^2.2.1",
+    "jsx-runtime": "^1.2.0",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
@@ -19,7 +26,7 @@
     "react-scripts": "3.4.3",
     "redux-orm": "^0.16.2",
     "source-map-explorer": "^2.5.0",
-    "firebase": "^7.16.1"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
