--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.6.0",
+    "@mui/styles": "^5.6.1",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -26,6 +27,7 @@
     "react-scripts": "3.4.3",
     "redux-orm": "^0.16.2",
     "source-map-explorer": "^2.5.0",
+    "swiper": "^8.1.1",
     "yup": "^0.32.11"
   },
   "scripts": {
