--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.0",
+    "@mui/lab": "^5.0.0-alpha.83",
     "@mui/material": "^5.6.0",
     "@mui/styles": "^5.6.1",
+    "@mui/x-data-grid": "^5.11.1",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.6.6",
     "axios": "^0.20.0",
+    "date-fns": "^2.28.0",
     "firebase": "^7.16.1",
     "formik": "^2.2.9",
     "js-cookie": "^2.2.1",
