--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^4.6.6",
     "axios": "^0.20.0",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.0.1",
     "firebase": "^7.16.1",
     "formik": "^2.2.9",
     "js-cookie": "^2.2.1",
