FIxes in Forgot Pssword, env Fixes

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_BASE_URL=https://planspace.herokuapp.com/
+REACT_APP_GOOGLE_API_KEY=252238412999-q66jdhb3c9ne04sosvuqf6laq08gqkld.apps.googleusercontent.com
