--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-app-redux",
-  "version": "0.1.0",
+  "version": "1.2.1",
+  "engines": { "node": "16.13.0", "npm": "8.1.0" },
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
