--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "my-app-redux",
+  "name": "planspace",
   "version": "1.2.1",
-  "engines": { "node": "16.13.0", "npm": "8.1.0" },
+  "homepage": "https://NasirNS45.github.io/planspace-poc-frontend",
+  "engines": {
+    "node": "16.13.0",
+    "npm": "8.1.0"
+  },
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
@@ -21,6 +25,7 @@
     "dotenv": "^16.0.1",
     "firebase": "^7.16.1",
     "formik": "^2.2.9",
+    "gh-pages": "^4.0.0",
     "js-cookie": "^2.2.1",
     "jsx-runtime": "^1.2.0",
     "moment": "^2.29.1",
@@ -39,6 +44,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
