Minor Packagejson Fix

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
         },
         {
             "src": "nuxt.config.js",
-            "use": "@nuxtjs/vercel-builder",
+            "use": "@nuxtjs/vercel-builder"
         }
     ]
 }
