--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "jsx-runtime": "^1.2.0",
         "moment": "^2.29.1",
         "node-sass": "^4.14.1",
+        "pusher-js": "^7.1.1-beta",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-hot-toast": "^2.2.0",
