Location Username Fix and evn variables fix

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 REACT_APP_BASE_URL=https://planspace.herokuapp.com/
 REACT_APP_GOOGLE_API_KEY=252238412999-q66jdhb3c9ne04sosvuqf6laq08gqkld.apps.googleusercontent.com
+REACT_APP_PUSHER_API_KEY="4d4775961a9801e20744"
+REACT_APP_PUSHER_CLUSTER="ap2"
