--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@babel/preset-env": "^7.18.6",
         "@emotion/react": "^11.9.0",
         "@emotion/styled": "^11.8.1",
         "@mui/icons-material": "^5.6.0",
@@ -20,6 +21,7 @@
         "dotenv": "^16.0.1",
         "firebase": "^7.16.1",
         "formik": "^2.2.9",
+        "jest-transform-css": "^4.0.1",
         "js-cookie": "^2.2.1",
         "jsx-runtime": "^1.2.0",
         "moment": "^2.29.1",
@@ -33,9 +35,10 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
         "react-social-login": "^3.4.15",
+        "react-toastify": "^8.2.0",
         "redux-orm": "^0.16.2",
         "source-map-explorer": "^2.5.0",
-        "swiper": "^8.1.1",
+        "swiper": "^6.8.4",
         "yup": "^0.32.11"
     },
     "scripts": {
