--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
         "dotenv": "^16.0.1",
         "firebase": "^7.16.1",
         "formik": "^2.2.9",
-        "jest-transform-css": "^4.0.1",
         "goober": "^2.1.10",
+        "jest-transform-css": "^4.0.1",
         "js-cookie": "^2.2.1",
         "jsx-runtime": "^1.2.0",
         "moment": "^2.29.1",
         "node-sass": "^4.14.1",
         "pusher-js": "^7.1.1-beta",
         "react": "^16.13.1",
+        "react-countdown-circle-timer": "^3.0.9",
         "react-dom": "^16.13.1",
         "react-hot-toast": "^2.2.0",
         "react-input-mask": "^2.0.4",
