fix: form in package

--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
         "@testing-library/user-event": "^7.2.1",
         "antd": "^4.6.6",
         "axios": "^0.20.0",
+        "babel-polyfill": "^6.26.0",
         "date-fns": "^2.28.0",
         "dotenv": "^16.0.1",
+        "draft-js": "^0.11.7",
         "firebase": "^7.16.1",
         "formik": "^2.2.9",
         "goober": "^2.1.10",
@@ -27,9 +29,9 @@
         "jsx-runtime": "^1.2.0",
         "moment": "^2.29.1",
         "pusher-js": "^7.1.1-beta",
-        "react": "^16.13.1",
+        "react": "^16.14.0",
         "react-countdown-circle-timer": "^3.0.9",
-        "react-dom": "^16.13.1",
+        "react-dom": "^16.14.0",
         "react-hot-toast": "^2.2.0",
         "react-input-mask": "^2.0.4",
         "react-password-strength-bar": "^0.4.1",
