--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react-dom": "^16.14.0",
         "react-hot-toast": "^2.2.0",
         "react-input-mask": "^2.0.4",
+        "react-password-checklist": "^1.4.0",
         "react-password-strength-bar": "^0.4.1",
         "react-redux": "^7.2.1",
         "react-router-dom": "^5.2.0",
