--- a/package.json
+++ b/package.json
@@ -3,49 +3,49 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@babel/preset-env": "^7.18.6",
+        "@babel/preset-env": "^7.18.9",
         "@ckeditor/ckeditor5-build-classic": "^34.2.0",
         "@ckeditor/ckeditor5-react": "^5.0.2",
-        "@emotion/react": "^11.9.0",
-        "@emotion/styled": "^11.8.1",
-        "@mui/icons-material": "^5.6.0",
-        "@mui/lab": "^5.0.0-alpha.83",
-        "@mui/material": "^5.6.0",
+        "@emotion/react": "^11.9.3",
+        "@emotion/styled": "^11.9.3",
+        "@mui/icons-material": "^5.8.4",
+        "@mui/lab": "^5.0.0-alpha.92",
+        "@mui/material": "^5.9.2",
         "@mui/styles": "^5.9.2",
-        "@mui/x-data-grid": "^5.11.1",
-        "@reduxjs/toolkit": "^1.4.0",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.5.0",
-        "@testing-library/user-event": "^7.2.1",
-        "antd": "^4.6.6",
-        "axios": "^0.20.0",
+        "@mui/x-data-grid": "^5.15.0",
+        "@reduxjs/toolkit": "^1.8.3",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "^13.3.0",
+        "@testing-library/user-event": "^14.3.0",
+        "antd": "^4.22.2",
+        "axios": "^0.27.2",
         "babel-polyfill": "^6.26.0",
         "date-fns": "^2.29.1",
         "dotenv": "^16.0.1",
         "draft-js": "^0.11.7",
-        "firebase": "^7.16.1",
+        "firebase": "^9.9.1",
         "formik": "^2.2.9",
         "goober": "^2.1.10",
         "jest-transform-css": "^4.0.1",
-        "js-cookie": "^2.2.1",
+        "js-cookie": "^3.0.1",
         "jsx-runtime": "^1.2.0",
-        "moment": "^2.29.1",
-        "pusher-js": "^7.1.1-beta",
-        "react": "^16.14.0",
+        "moment": "^2.29.4",
+        "pusher-js": "^7.3.0",
+        "react": "^18.2.0",
         "react-countdown-circle-timer": "^3.0.9",
-        "react-dom": "^16.14.0",
-        "react-hot-toast": "^2.2.0",
+        "react-dom": "^18.2.0",
+        "react-hot-toast": "^2.3.0",
         "react-input-mask": "^2.0.4",
         "react-password-checklist": "^1.4.0",
         "react-password-strength-bar": "^0.4.1",
-        "react-redux": "^7.2.1",
-        "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.3",
+        "react-redux": "^8.0.2",
+        "react-router-dom": "^6.3.0",
+        "react-scripts": "5.0.1",
         "react-social-login": "^3.4.15",
-        "react-toastify": "^8.2.0",
+        "react-toastify": "^9.0.7",
         "redux-orm": "^0.16.2",
-        "source-map-explorer": "^2.5.0",
-        "swiper": "^8.1.1",
+        "source-map-explorer": "^2.5.2",
+        "swiper": "^8.3.2",
         "yup": "^0.32.11"
     },
     "scripts": {
@@ -71,6 +71,6 @@
         ]
     },
     "devDependencies": {
-        "sass": "^1.53.0"
+        "sass": "^1.54.0"
     }
 }
